syntax = "proto3";
package xpla.volunteer.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/xpladev/xpla/x/volunteer/types";

// Query defines the gRPC querier service for volunteer module.
service Query {
    rpc VolunteerValidators(QueryVolunteerValidatorsRequest) returns (QueryVolunteerValidatorsResponse) {
      option (google.api.http).get = "/xpla/volun/v1beta1/validators";
    }
}

message QueryVolunteerValidatorsRequest {}

message QueryVolunteerValidatorsResponse {
  repeated string volunteer_validators = 1;
}